<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentsearch"
    tools:context="com.example.elsayedfahmy.task.searchFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20dp"
                android:text="@string/location"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView

                    android:layout_width="0dp"
                    android:layout_weight=".1"
                    android:layout_height="40dp"
                    android:id="@+id/image_map"
                    android:src="@drawable/map"
                    />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight=".9"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:hint="@string/hint_location"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight=".1"
                    android:layout_height="40dp"
                    android:id="@+id/imageButton_location"
                    android:src="@drawable/location"
                   />
            </LinearLayout>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20dp"
                android:text="@string/salaries"
                android:layout_marginTop="15dp"
                />


            <io.apptik.widget.MultiSlider
                android:id="@+id/range_slider5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbNumber="2"


               app:drawThumbsApart="true"

                app:stepsThumbsApart="5"
                app:trackColor="#737373"
                app:rangeColor="#000000"
                app:thumbColor="#FFFF00"

                />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"

    >
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/salary"
        android:textSize="15dp"
       />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/salary"

      />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/salary"

        />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/salary"

        />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/salary"

        />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/salary"

        />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/salary"

        />

</LinearLayout>



            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20dp"
                android:text="@string/contact"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
               >

                <!-- A CardView that contains a TextView -->
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/fulltime"
                    android:layout_gravity="top"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:longClickable="true"
                    android:orientation="vertical"

                    card_view:cardUseCompatPadding="true"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="4dp"
                    card_view:contentPadding="10dp"
                    card_view:cardBackgroundColor="#00004C"

                    >
                    <TextView
                        android:id="@+id/textfulltime"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:text="@string/fulltime"
                        android:textSize="10dp"
                        android:gravity="center"
                        />

                </android.support.v7.widget.CardView>
                <!-- A CardView that contains a TextView -->
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view_partime"
                    android:layout_gravity="top"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:longClickable="true"
                    android:orientation="vertical"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="4dp"
                    card_view:contentPadding="10dp"
                    card_view:cardBackgroundColor="#00004C"
                    >
                    <TextView
                        android:id="@+id/textparttime"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/parttime"
                        android:textSize="10dp"
                        android:textColor="#FFFFFF"
                        android:gravity="center"

                        />

                </android.support.v7.widget.CardView>
                <!-- A CardView that contains a TextView -->
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view_intership"
                    android:layout_gravity="top"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:longClickable="true"
                    android:orientation="vertical"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="4dp"
                    card_view:contentPadding="10dp"

                    card_view:cardBackgroundColor="#00004C"
                    >
                    <TextView
                        android:id="@+id/textintership"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="10dp"
                        android:text="@string/intership"

                        android:gravity="center"
                        />

                </android.support.v7.widget.CardView>
                <!-- A CardView that contains a TextView -->
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_viewfreelance"
                    android:layout_gravity="top"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:longClickable="true"
                    android:orientation="vertical"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="4dp"
                    card_view:contentPadding="10dp"
                    card_view:cardBackgroundColor="#00004C"

                    >
                    <TextView
                        android:id="@+id/info_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="10dp"
                        android:text="@string/freelance"

                        android:gravity="center"
                        />
                </android.support.v7.widget.CardView>



            </LinearLayout>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20dp"
                android:text="@string/distance"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="150dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_viewRelocate"
                    android:layout_gravity="top"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:longClickable="true"
                    android:orientation="vertical"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="4dp"
                    card_view:contentPadding="10dp"

                    card_view:cardBackgroundColor="#00004C"
                    >
                    <TextView
                        android:id="@+id/textRelocate"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:text="@string/Relocate"
                        android:gravity="center"
                        android:textSize="10dp"
                        />
                </android.support.v7.widget.CardView>



                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_viewdicrtance"
                    android:layout_gravity="top"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:longClickable="true"
                    android:orientation="vertical"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="4dp"
                    card_view:contentPadding="10dp"
                    card_view:cardBackgroundColor="#00004C"
                    >
                    <TextView
                        android:id="@+id/textdistance"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:text="@string/distance_child"
                        android:textSize="10dp"
                        android:gravity="center"
                        />
                </android.support.v7.widget.CardView>


            </LinearLayout>

        </LinearLayout>


    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_search"
        app:backgroundTint="@color/colorPrimary" />

</FrameLayout>
